<resources>
    <string name="app_name">You and I</string>
    <string name="nav_location">地图</string>
    <string name="nav_recommand">推荐</string>
    <string name="nav_message">消息</string>
    <string name="nav_mine">我的</string>
    <string name="nav_dynamics">动态</string>
    <string name="nav_launch">发布</string>
    <string name="takephoto">拍照</string>
    <string name="num">数量</string>
    <string name="money">悬赏活动</string>
    <string name="selectfromalbum">从相册中选择</string>
    <string name="cancel">取消</string>
    <string name="launch">发布</string>
    <string name="type">类型：</string>
    <string name="location">地点：</string>
    <string name="title">标题：</string>
    <string name="creator">创建者：</string>
    <string name="commit">评论</string>
    <string name="detail">查看详情</string>
    <string name="apply">申请活动</string>
    <string name="time">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">截止时间</string>
    <string name="theme">活动主题</string>
    <string name="number">最多人数</string>
    <string name="activity_type">活动类型</string>
    <string name="activity_introduce">活动简介</string>
    <string name="activity_location">活动地点</string>
    <string name="commend">评论</string>
    <string name="checkCommend">查看全部评论</string>
</resources>
