<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingBottom="10dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_takephoto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_border_takephoto"
            android:gravity="center"
            android:text="@string/takephoto"
            android:textColor="#323232" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="#eee" />

            <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_selectalbum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/btn_border_nativephoto"
            android:text="@string/selectfromalbum"
            android:textColor="#323232" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_image_clicked_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/btn_border"
            android:text="@string/cancel"
            android:textColor="#323232" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>