<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>


    <com.amap.api.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="@dimen/dp_200"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/ll_position"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/activity_location"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <AutoCompleteTextView
                    android:id="@+id/tv_selected_position"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/current_date"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_selected_date"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/number">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/activity_type"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/ed_spinner"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_theme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/theme"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/ed_theme"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_starttime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_date">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/start_time"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_selected_time"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_endtime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_starttime">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/end_time"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_selected_endtime"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_theme">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/number"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/ed_number"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:inputType="number"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/activity_introduce"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/ed_introduce"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/dp_20"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"

                android:id="@+id/bt_order"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/confirm"
                app:layout_constraintTop_toBottomOf="@+id/ll_spinner"/>

        </LinearLayout>

    </ScrollView>







</LinearLayout>